--- a/47-rabbitmq/47-rabbitmq-producer/pom.xml
+++ b/47-rabbitmq/47-rabbitmq-producer/pom.xml
@@ -32,6 +32,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <!--Unable to start ServletWebServerApplicationContext due to missing ServletWebServerFactory bean.-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
         <!--RabbitMQ依赖-->
         <dependency>
