--- a/47-rabbitmq/47-rabbitmq-consumer/pom.xml
+++ b/47-rabbitmq/47-rabbitmq-consumer/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+        <!--Unable to start ServletWebServerApplicationContext due to missing ServletWebServerFactory bean.-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <!--RabbitMQ依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
