--- a/47-rabbitmq/47-rabbitmq-ha/src/main/resources/application.properties
+++ b/47-rabbitmq/47-rabbitmq-ha/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 # RabbitMQ配置
-spring.rabbitmq.addresses=192.168.0.105:5672
+spring.rabbitmq.addresses=localhost:5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
 spring.rabbitmq.connection-timeout=15000
 # 采用消息确认模式
 spring.rabbitmq.publisher-confirms=true
+#开启return模式
 spring.rabbitmq.publisher-returns=true
+#开启强制委托模式
 spring.rabbitmq.template.mandatory=true
 
 # Server配置
@@ -22,11 +24,12 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1234
 
 mybatis.type-aliases-package=
 mybatis.mapper-locations=classpath:com/  /mapper/*.xml
 
-logging.level.tk.mybatis=TRACE
+#logging.level.tk.mybatis=TRACE
+logging.level.com.myimooc.rabbitmq.ha.dao.mapper=info
 logging.level.com.myimooc.rabbitmq=debug
 
