--- a/47-rabbitmq/47-rabbitmq-producer/src/main/resources/application.properties
+++ b/47-rabbitmq/47-rabbitmq-producer/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # RabbitMQ配置
-spring.rabbitmq.addresses=192.168.0.105:5672
+#spring.rabbitmq.addresses=192.168.0.105:5672
+spring.rabbitmq.addresses=localhost:5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
